@@ -6,6 +6,7 @@ version 0.49:
 	* Updated Russian translation (thanks Grigory Bakunov)
 	* Updated Korean translation (thanks Ho-seok Lee, also for
 	  resized ICQ icons)
+	* Option to show aliases in conversation tabs
 
 version 0.48 (11/18/2001):
 	* Right-click on links to open/copy URL
